@@ -1,6 +1,11 @@
 # ChangeLog for net-firewall/shorewall-shell
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.30 2009/06/08 04:01:12 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.31 2009/10/09 12:04:25 pva Exp $
+
+*shorewall-shell-4.2.11 (09 Oct 2009)
+
+  09 Oct 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.11.ebuild:
+  Version bump, bug #281617, thank Vieri for this work.
 
   08 Jun 2009; Jeroen Roovers <jer@gentoo.org>
   shorewall-shell-4.0.15.ebuild:
